--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -4,8 +4,6 @@
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -35,18 +33,34 @@
             <Point3D />
          </rotationAxis>
          <children>
-            <ImageView fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2" />
-            <ImageView fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <ImageView fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <ImageView fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <ImageView fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-            <ImageView fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <ImageView fx:id="imgHeadgear" fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2" />
+            <ImageView fx:id="imgArmor" fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ImageView fx:id="imgLeftHand" fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <ImageView fx:id="imgRightHand" fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <ImageView fx:id="imgFootgear" fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <ImageView fx:id="imgOneTimeUse" fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="2" />
             <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="2">
                <children>
-                  <Label text="Attack:" />
-                  <TextField fx:id="txtAttack" />
-                  <Label text="Level:" />
-                  <TextField fx:id="txtLevel" />
+                  <Label fx:id="lblAttack" text="Attack:">
+                     <VBox.margin>
+                        <Insets top="1.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label fx:id="lblCurrentAttackLevel" text="Attacklevel" textAlignment="CENTER" wrapText="true">
+                     <VBox.margin>
+                        <Insets top="1.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label fx:id="lblLevel" text="Level:">
+                     <VBox.margin>
+                        <Insets top="1.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label fx:id="lblCurrentPlayerLevel" prefHeight="22.0" prefWidth="92.0" text="Playerlevel" textAlignment="CENTER" wrapText="true">
+                     <VBox.margin>
+                        <Insets top="1.0" />
+                     </VBox.margin>
+                  </Label>
                   <Button fx:id="btnOneTimeUse" mnemonicParsing="false" text="Activate scroll">
                      <VBox.margin>
                         <Insets bottom="5.0" />
@@ -102,7 +116,7 @@
                         <Insets left="7.0" />
                      </GridPane.margin>
                   </Button>
-                  <ImageView fitHeight="55.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <ImageView fx:id="imgCompass" fitHeight="55.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <GridPane GridPane.columnIndex="6" GridPane.rowIndex="1">
@@ -116,18 +130,18 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField fx:id="txtFight" prefHeight="136.0" prefWidth="92.0" GridPane.columnSpan="2" />
-                  <TextField fx:id="txtFlee" prefHeight="77.0" prefWidth="92.0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-                  <TextField fx:id="txtLoot" prefHeight="81.0" prefWidth="92.0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
                   <Button fx:id="btnFight" mnemonicParsing="false" opacity="0.5" prefHeight="58.0" prefWidth="92.0" text="Fight" GridPane.columnSpan="2" />
+                  <Label fx:id="lblFight" alignment="CENTER" contentDisplay="CENTER" prefHeight="87.0" prefWidth="92.0" text="Fight" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS" GridPane.columnSpan="2" />
                   <Button fx:id="bthFlee" mnemonicParsing="false" opacity="0.5" prefHeight="53.0" prefWidth="92.0" text="Flee" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+                  <Label fx:id="lblFlee" alignment="CENTER" contentDisplay="CENTER" prefHeight="62.0" prefWidth="92.0" text="Flee" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.rowIndex="1" />
                   <Button fx:id="btnLoot" mnemonicParsing="false" opacity="0.5" prefHeight="74.0" prefWidth="92.0" text="Loot" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+                  <Label fx:id="lblLoot" alignment="CENTER" prefHeight="74.0" prefWidth="92.0" text="Loot" GridPane.columnSpan="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
             <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="1">
                <children>
                   <ImageView fx:id="imgRoll" fitHeight="79.0" fitWidth="93.0" pickOnBounds="true" preserveRatio="true" />
-                  <TextArea fx:id="txtButtonactionStatement" prefHeight="200.0" prefWidth="200.0" />
+                  <Label fx:id="lblTextOutputToUser" prefHeight="91.0" prefWidth="93.0" text="Textoutput to user" textAlignment="CENTER" wrapText="true" />
                </children>
             </VBox>
             <ImageView fx:id="imgRoomView" fitHeight="320.0" fitWidth="456.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
