--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="GUI.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FXMLController">
    <children>
       <GridPane prefHeight="480.0" prefWidth="640.0">
         <columnConstraints>
@@ -61,12 +60,12 @@
                         <Insets top="1.0" />
                      </VBox.margin>
                   </Label>
-                  <Button fx:id="btnOneTimeUse" mnemonicParsing="false" text="Activate scroll">
+                  <Button fx:id="btnOneTimeUse" mnemonicParsing="false" onAction="#handleOneTimeUseButtonAction" text="Activate scroll">
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="btnHelp" mnemonicParsing="false" text="Help">
+                  <Button fx:id="btnHelp" mnemonicParsing="false" onAction="#handleHelpButtonAction" text="Help">
                      <VBox.margin>
                         <Insets bottom="5.0" left="66.0" />
                      </VBox.margin>
@@ -74,7 +73,7 @@
                         <Insets bottom="1.0" />
                      </padding>
                   </Button>
-                  <Button fx:id="btnQuit" mnemonicParsing="false" text="Quit">
+                  <Button fx:id="btnQuit" mnemonicParsing="false" onAction="#handleQuitButtonAction" text="Quit">
                      <VBox.margin>
                         <Insets bottom="5.0" left="66.0" />
                      </VBox.margin>
@@ -89,6 +88,7 @@
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -96,22 +96,22 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="btnGoNorth" mnemonicParsing="false" text="North" GridPane.columnIndex="1" GridPane.columnSpan="3">
-                     <GridPane.margin>
-                        <Insets left="7.0" />
-                     </GridPane.margin>
-                  </Button>
-                  <Button fx:id="btnGoWest" mnemonicParsing="false" text="West" GridPane.columnSpan="2" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets left="18.0" />
-                     </GridPane.margin>
-                  </Button>
-                  <Button fx:id="btnGoEast" mnemonicParsing="false" text="East" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Button fx:id="btnGoEast" mnemonicParsing="false" onAction="#handleGoEastButtonAction" text="East" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="5.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnGoSouth" mnemonicParsing="false" text="South" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Button fx:id="btnGoNorth" mnemonicParsing="false" onAction="#handleGoNorthButtonAction" text="North" GridPane.columnIndex="1" GridPane.columnSpan="3">
+                     <GridPane.margin>
+                        <Insets left="7.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnGoWest" mnemonicParsing="false" onAction="#handleGoWestButtonAction" text="West" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="18.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnGoSouth" mnemonicParsing="false" onAction="#handleGoSouthButtonAction" text="South" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="7.0" />
                      </GridPane.margin>
@@ -130,11 +130,11 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="btnFight" mnemonicParsing="false" opacity="0.5" prefHeight="58.0" prefWidth="92.0" text="Fight" GridPane.columnSpan="2" />
+                  <Button fx:id="btnFight" mnemonicParsing="false" onAction="#handleFightButtonAction" opacity="0.5" prefHeight="58.0" prefWidth="92.0" text="Fight" GridPane.columnSpan="2" />
                   <Label fx:id="lblFight" alignment="CENTER" contentDisplay="CENTER" prefHeight="87.0" prefWidth="92.0" text="Fight" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS" GridPane.columnSpan="2" />
-                  <Button fx:id="bthFlee" mnemonicParsing="false" opacity="0.5" prefHeight="53.0" prefWidth="92.0" text="Flee" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+                  <Button fx:id="bthFlee" mnemonicParsing="false" onAction="#handleFleeButtonAction" opacity="0.5" prefHeight="53.0" prefWidth="92.0" text="Flee" GridPane.columnSpan="2" GridPane.rowIndex="1" />
                   <Label fx:id="lblFlee" alignment="CENTER" contentDisplay="CENTER" prefHeight="62.0" prefWidth="92.0" text="Flee" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-                  <Button fx:id="btnLoot" mnemonicParsing="false" opacity="0.5" prefHeight="74.0" prefWidth="92.0" text="Loot" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+                  <Button fx:id="btnLoot" mnemonicParsing="false" onAction="#handleLootButtonAction" opacity="0.5" prefHeight="74.0" prefWidth="92.0" text="Loot" GridPane.columnSpan="2" GridPane.rowIndex="2" />
                   <Label fx:id="lblLoot" alignment="CENTER" prefHeight="74.0" prefWidth="92.0" text="Loot" GridPane.columnSpan="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
