--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -4,6 +4,8 @@
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -38,52 +40,69 @@
             <ImageView fx:id="imgRightHand" fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="2" />
             <ImageView fx:id="imgFootgear" fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="2" />
             <ImageView fx:id="imgOneTimeUse" fitHeight="160.0" fitWidth="91.4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-            <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="2">
+            <VBox fx:id="VBoxAttackLevelOneTimeUseHelpQuit" prefHeight="162.0" prefWidth="92.0" GridPane.columnIndex="6" GridPane.rowIndex="2">
                <children>
                   <Label fx:id="lblAttack" text="Attack:">
                      <VBox.margin>
-                        <Insets top="1.0" />
+                        <Insets />
                      </VBox.margin>
+                     <padding>
+                        <Insets bottom="1.0" top="1.0" />
+                     </padding>
                   </Label>
-                  <Label fx:id="lblCurrentAttackLevel" text="Attacklevel" textAlignment="CENTER" wrapText="true">
-                     <VBox.margin>
-                        <Insets top="1.0" />
-                     </VBox.margin>
-                  </Label>
+                  <TextField fx:id="lblAttackLevel" />
                   <Label fx:id="lblLevel" text="Level:">
                      <VBox.margin>
-                        <Insets top="1.0" />
+                        <Insets />
                      </VBox.margin>
+                     <padding>
+                        <Insets bottom="1.0" top="1.0" />
+                     </padding>
                   </Label>
-                  <Label fx:id="lblCurrentPlayerLevel" prefHeight="22.0" prefWidth="92.0" text="Playerlevel" textAlignment="CENTER" wrapText="true">
+                  <TextField fx:id="txtPlayerLevel">
+                     <padding>
+                        <Insets bottom="1.0" top="1.0" />
+                     </padding>
                      <VBox.margin>
-                        <Insets top="1.0" />
+                        <Insets />
                      </VBox.margin>
-                  </Label>
+                  </TextField>
                   <Button fx:id="btnOneTimeUse" mnemonicParsing="false" onAction="#handleOneTimeUseButtonAction" text="Activate scroll">
                      <VBox.margin>
-                        <Insets bottom="5.0" />
+                        <Insets top="1.0" />
                      </VBox.margin>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
                   </Button>
                   <Button fx:id="btnHelp" mnemonicParsing="false" onAction="#handleHelpButtonAction" text="Help">
                      <VBox.margin>
-                        <Insets bottom="5.0" left="66.0" />
+                        <Insets top="1.0" />
                      </VBox.margin>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
                      <padding>
-                        <Insets bottom="1.0" />
+                        <Insets bottom="1.0" top="1.0" />
                      </padding>
                   </Button>
                   <Button fx:id="btnQuit" mnemonicParsing="false" onAction="#handleQuitButtonAction" text="Quit">
                      <VBox.margin>
-                        <Insets bottom="5.0" left="66.0" />
+                        <Insets top="1.0" />
                      </VBox.margin>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
                      <padding>
-                        <Insets bottom="1.0" />
+                        <Insets bottom="1.0" top="1.0" />
                      </padding>
                   </Button>
                </children>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </VBox>
-            <GridPane GridPane.columnIndex="5" GridPane.columnSpan="2">
+            <GridPane fx:id="GridPaneCompass" GridPane.columnIndex="5" GridPane.columnSpan="2">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -119,7 +138,7 @@
                   <ImageView fx:id="imgCompass" fitHeight="55.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <GridPane GridPane.columnIndex="6" GridPane.rowIndex="1">
+            <GridPane fx:id="GridPaneFightFleeLoot" GridPane.columnIndex="6" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -130,18 +149,17 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
+                  <TextField fx:id="txtFight" prefHeight="80.0" prefWidth="92.0" promptText="Fight" GridPane.columnSpan="2" />
                   <Button fx:id="btnFight" mnemonicParsing="false" onAction="#handleFightButtonAction" opacity="0.5" prefHeight="58.0" prefWidth="92.0" text="Fight" GridPane.columnSpan="2" />
-                  <Label fx:id="lblFight" alignment="CENTER" contentDisplay="CENTER" prefHeight="87.0" prefWidth="92.0" text="Fight" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS" GridPane.columnSpan="2" />
+                  <TextField fx:id="txtFlee" prefHeight="63.0" prefWidth="92.0" promptText="Flee" GridPane.columnSpan="2" GridPane.rowIndex="1" />
                   <Button fx:id="bthFlee" mnemonicParsing="false" onAction="#handleFleeButtonAction" opacity="0.5" prefHeight="53.0" prefWidth="92.0" text="Flee" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-                  <Label fx:id="lblFlee" alignment="CENTER" contentDisplay="CENTER" prefHeight="62.0" prefWidth="92.0" text="Flee" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+                  <TextField fx:id="txtLoot" prefHeight="62.0" prefWidth="92.0" promptText="Loot" GridPane.columnSpan="2" GridPane.rowIndex="2" />
                   <Button fx:id="btnLoot" mnemonicParsing="false" onAction="#handleLootButtonAction" opacity="0.5" prefHeight="74.0" prefWidth="92.0" text="Loot" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-                  <Label fx:id="lblLoot" alignment="CENTER" prefHeight="74.0" prefWidth="92.0" text="Loot" GridPane.columnSpan="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="1">
+            <VBox fx:id="VBoxOutput" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="1">
                <children>
-                  <ImageView fx:id="imgRoll" fitHeight="79.0" fitWidth="93.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label fx:id="lblTextOutputToUser" prefHeight="91.0" prefWidth="93.0" text="Textoutput to user" textAlignment="CENTER" wrapText="true" />
+                  <TextArea fx:id="txtOutPut" prefHeight="200.0" prefWidth="200.0" />
                </children>
             </VBox>
             <ImageView fx:id="imgRoomView" fitHeight="320.0" fitWidth="456.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
