--- a/WorldofZuul/src/GUI/Losing.fxml
+++ b/WorldofZuul/src/GUI/Losing.fxml
@@ -1,21 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="150.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LosingController">
     <children>
-        <TextArea fx:id="txtAreaLosing" editable="false" prefHeight="150.0" prefWidth="600.0" wrapText="true">
-         <font>
-            <Font name="Garamond Bold" size="14.0" />
-         </font>
-      </TextArea>
-      <Button fx:id="btnQuitFromLosinge" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="264.0" layoutY="125.0" mnemonicParsing="false" onAction="handleQuitButtonAction" text="Quit game" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
-          <font>
-            <Font name="Windlass" size="14.0" />
-         </font>
-      </Button>
+      <GridPane prefHeight="150.0" prefWidth="600.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="435.0" minWidth="10.0" prefWidth="182.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="316.0" minWidth="0.0" prefWidth="198.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="257.0" minWidth="10.0" prefWidth="191.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+              <TextArea fx:id="txtAreaLosing" editable="false" prefHeight="122.0" prefWidth="600.0" wrapText="true" GridPane.columnSpan="3" GridPane.rowSpan="2">
+               <font>
+                  <Font name="Garamond Bold" size="14.0" />
+               </font>
+            </TextArea>
+            <Button fx:id="btnQuitFromLosinge" alignment="BOTTOM_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleQuitButtonAction" text="Quit game" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <font>
+                  <Font name="Windlass" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="54.0" />
+               </GridPane.margin>
+            </Button>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
