--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -201,6 +201,7 @@
                   <Insets bottom="160.0" />
                </GridPane.margin>
             </ImageView>
+            <ImageView fx:id="imgMonsterCurseItem" fitHeight="113.0" fitWidth="183.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowSpan="2" />
          </children>
       </GridPane>
    </children>
