--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -131,9 +131,13 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
+                  <ImageView fx:id="imgCompass" fitHeight="176.0" fitWidth="185.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="3" GridPane.rowSpan="3">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin></ImageView>
                   <Button fx:id="btnGoEast" mnemonicParsing="false" onAction="#handleGoEastButtonAction" text="East" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="3.0" />
+                        <Insets bottom="20.0" left="16.0" />
                      </GridPane.margin>
                      <font>
                         <Font name="Windlass" size="12.0" />
@@ -141,7 +145,7 @@
                   </Button>
                   <Button fx:id="btnGoNorth" mnemonicParsing="false" onAction="#handleGoNorthButtonAction" text="North" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="3">
                      <GridPane.margin>
-                        <Insets left="4.0" />
+                        <Insets bottom="50.0" left="4.0" />
                      </GridPane.margin>
                      <font>
                         <Font name="Windlass" size="12.0" />
@@ -149,7 +153,7 @@
                   </Button>
                   <Button fx:id="btnGoWest" mnemonicParsing="false" onAction="#handleGoWestButtonAction" text="West" textAlignment="CENTER" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="18.0" />
+                        <Insets bottom="20.0" />
                      </GridPane.margin>
                      <font>
                         <Font name="Windlass" size="12.0" />
@@ -157,13 +161,12 @@
                   </Button>
                   <Button fx:id="btnGoSouth" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleGoSouthButtonAction" prefHeight="18.0" prefWidth="89.0" text="South" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
-                        <Insets left="4.0" />
+                        <Insets left="4.0" top="32.0" />
                      </GridPane.margin>
                      <font>
                         <Font name="Windlass" size="12.0" />
                      </font>
                   </Button>
-                  <ImageView fx:id="imgCompass" fitHeight="55.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <GridPane fx:id="GridPaneFightFleeLoot" GridPane.columnIndex="6" GridPane.rowIndex="1">
