Enlarge card view
OBS. Curse does not show!

--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -205,6 +205,7 @@
                </GridPane.margin>
             </ImageView>
             <ImageView fx:id="imgMonsterCurseItem" fitHeight="113.0" fitWidth="183.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowSpan="2" />
+            <Button fx:id="btnShowCard" mnemonicParsing="false" onAction="#handleShowCardButtonAction" opacity="0.0" prefHeight="133.0" prefWidth="183.0" text="showCard" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowSpan="2" />
          </children>
       </GridPane>
    </children>
