--- a/WorldofZuul/src/GUI/HelpWindow.fxml
+++ b/WorldofZuul/src/GUI/HelpWindow.fxml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="150.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.HelpWindowController">
+<AnchorPane id="AnchorPane" prefHeight="200.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.HelpWindowController">
    <children>
-      <TextArea fx:id="txtAreaHelp" editable="false" prefHeight="150.0" prefWidth="600.0" wrapText="true">
+      <TextArea fx:id="txtAreaHelp" editable="false" prefHeight="180.0" prefWidth="600.0" wrapText="true">
          <font>
             <Font name="Garamond" size="14.0" />
          </font>
       </TextArea>
+      <Button fx:id="btnCloseWindow" alignment="CENTER" contentDisplay="CENTER" layoutX="244.0" layoutY="181.0" mnemonicParsing="false" onAction="#handleCloseWindowButtonAction" text="Close Window" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font name="Windlass" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
