--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -80,7 +80,7 @@
                         <Insets />
                      </VBox.margin>
                   </TextField>
-                  <Button fx:id="btnOneTimeUse" mnemonicParsing="false" onAction="#handleOneTimeUseButtonAction" text="Activate scroll" wrapText="true">
+                  <Button fx:id="btnOneTimeUse" mnemonicParsing="false" onAction="#handleOneTimeUseButtonAction" text="Activate scroll" textAlignment="CENTER" wrapText="true">
                      <VBox.margin>
                         <Insets top="1.0" />
                      </VBox.margin>
@@ -91,7 +91,7 @@
                         <Font name="Windlass" size="12.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnHelp" mnemonicParsing="false" onAction="#handleHelpButtonAction" text="Help">
+                  <Button fx:id="btnHelp" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleHelpButtonAction" prefHeight="18.0" prefWidth="92.0" text="Help" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets top="1.0" />
                      </VBox.margin>
@@ -105,7 +105,7 @@
                         <Font name="Windlass" size="12.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnQuit" mnemonicParsing="false" onAction="#handleQuitButtonAction" text="Quit">
+                  <Button fx:id="btnQuit" mnemonicParsing="false" onAction="#handleQuitButtonAction" prefHeight="16.0" prefWidth="91.0" text="Quit">
                      <VBox.margin>
                         <Insets top="1.0" />
                      </VBox.margin>
