--- a/WorldofZuul/src/GUI/ShowOneTimeUse.fxml
+++ b/WorldofZuul/src/GUI/ShowOneTimeUse.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="378.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.ShowOneTimeUseController">
    <children>
-      <ImageView fx:id="imgShotOneTimeUse" fitHeight="600.0" fitWidth="378.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imgShowOneTimeUse" fitHeight="600.0" fitWidth="378.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="btnCloseWindow" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleCloseWindowButtonAction" opacity="0.0" prefHeight="600.0" prefWidth="378.0" text="Close window" textAlignment="CENTER">
          <font>
             <Font name="Windlass" size="12.0" />
