--- a/WorldofZuul/src/GUI/StartMenu.fxml
+++ b/WorldofZuul/src/GUI/StartMenu.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="305.0" prefWidth="612.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.StartMenuController">
+<AnchorPane id="AnchorPane" prefHeight="305.0" prefWidth="612.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.StartMenuController">
    <children>
-      <ImageView id="StartMenuImage" fx:id="imgStartMenu" fitHeight="400.0" fitWidth="600.0" layoutX="6.0" pickOnBounds="true" preserveRatio="true"></ImageView>
-      <Button id="StartGameBtn" fx:id="btnStartGame" layoutX="381.0" layoutY="233.0" mnemonicParsing="false" onAction="#handleStartGameButtonAction" text="Start Game" />
+      <ImageView id="StartMenuImage" fx:id="imgStartMenu" fitHeight="400.0" fitWidth="600.0" layoutX="6.0" pickOnBounds="true" preserveRatio="true" />
+      <Button id="StartGameBtn" fx:id="btnStartGame" layoutX="303.0" layoutY="136.0" mnemonicParsing="false" onAction="#handleStartGameButtonAction" text="Start Game" textFill="#56171a">
+         <font>
+            <Font name="Windlass" size="31.0" />
+         </font></Button>
    </children>
 </AnchorPane>
