--- a/WorldofZuul/src/GUI/HelpWindow.fxml
+++ b/WorldofZuul/src/GUI/HelpWindow.fxml
@@ -9,7 +9,7 @@
    <children>
       <TextArea fx:id="txtAreaHelp" editable="false" prefHeight="290.0" prefWidth="600.0" wrapText="true">
          <font>
-            <Font name="Garamond" size="14.0" />
+            <Font name="Windlass" size="14.0" />
          </font>
       </TextArea>
       <Button fx:id="btnCloseWindow" alignment="CENTER" contentDisplay="CENTER" layoutX="246.0" layoutY="291.0" mnemonicParsing="false" onAction="#handleCloseWindowButtonAction" text="Close Window" textAlignment="CENTER" wrapText="true">
