--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -77,7 +77,7 @@
                         <Font name="Windlass" size="12.0" />
                      </font>
                   </TextField>
-                  <Button fx:id="btnOneTimeUse" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleOneTimeUseButtonAction" prefHeight="36.0" prefWidth="92.0" text="Activate scroll" textAlignment="CENTER" textFill="#56171a" wrapText="true">
+                  <Button fx:id="btnOneTimeUse" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleOneTimeUseButtonAction" prefHeight="36.0" prefWidth="92.0" text="Scroll" textAlignment="CENTER" textFill="#56171a" wrapText="true">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
@@ -142,11 +142,14 @@
                   </Button>
                   <Button fx:id="btnGoNorth" mnemonicParsing="false" onAction="#handleGoNorthButtonAction" text="North" textAlignment="CENTER" textFill="#56171a" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="3">
                      <GridPane.margin>
-                        <Insets bottom="50.0" left="4.0" />
+                        <Insets bottom="50.0" left="4.0" top="2.0" />
                      </GridPane.margin>
                      <font>
                         <Font name="Windlass" size="12.0" />
                      </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
                   </Button>
                   <Button fx:id="btnGoWest" mnemonicParsing="false" onAction="#handleGoWestButtonAction" text="West" textAlignment="CENTER" textFill="#56171a" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="1">
                      <GridPane.margin>
@@ -158,7 +161,7 @@
                   </Button>
                   <Button fx:id="btnGoSouth" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleGoSouthButtonAction" prefHeight="18.0" prefWidth="89.0" text="South" textAlignment="CENTER" textFill="#56171a" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
-                        <Insets left="4.0" top="32.0" />
+                        <Insets bottom="4.0" left="4.0" top="32.0" />
                      </GridPane.margin>
                      <font>
                         <Font name="Windlass" size="12.0" />
