--- a/WorldofZuul/src/GUI/StartMenu.fxml
+++ b/WorldofZuul/src/GUI/StartMenu.fxml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="305.0" prefWidth="612.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.StartMenuController">
+<AnchorPane id="AnchorPane" prefHeight="300.0" prefWidth="592.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.StartMenuController">
    <children>
-      <ImageView id="StartMenuImage" fx:id="imgStartMenu" fitHeight="400.0" fitWidth="600.0" layoutX="6.0" pickOnBounds="true" preserveRatio="true" />
-      <Button id="StartGameBtn" fx:id="btnStartGame" layoutX="303.0" layoutY="136.0" mnemonicParsing="false" onAction="#handleStartGameButtonAction" text="Start Game" textFill="#56171a">
+      <ImageView id="StartMenuImage" fx:id="imgStartMenu" fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Pictures/BackGround/MunchkinWelcome%20vers%202.jpg" />
+         </image></ImageView>
+      <Button id="StartGameBtn" fx:id="btnStartGame" alignment="CENTER" contentDisplay="CENTER" layoutX="264.0" layoutY="136.0" mnemonicParsing="false" onAction="#handleStartGameButtonAction" text="Start Singleplayer Game" textFill="#56171a">
          <font>
-            <Font name="Windlass" size="31.0" />
+            <Font name="Windlass" size="20.0" />
          </font></Button>
+      <Button fx:id="btnStartMultiplayer" alignment="CENTER" contentDisplay="CENTER" layoutX="264.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleStartMultiplayerButtonAction" text="Start Multiplayer Game" textFill="#56171a">
+         <font>
+            <Font name="Windlass" size="20.0" />
+         </font>
+         <padding>
+            <Insets bottom="6.0" left="15.5" right="15.5" top="6.0" />
+         </padding>
+      </Button>
+      <Button fx:id="btnQuitGame" layoutX="264.0" layoutY="203.0" mnemonicParsing="false" onAction="#handleQuitGameButtonAction" text="Quit Game" textFill="#56171a">
+         <font>
+            <Font name="Windlass" size="20.0" />
+         </font>
+         <padding>
+            <Insets bottom="6.0" left="92.0" right="92.0" top="6.0" />
+         </padding>
+      </Button>
    </children>
 </AnchorPane>
