Edited layout for End Turn

--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -136,13 +136,16 @@
                      <image>
                         <Image url="@../Pictures/BackGround/compass.png" />
                      </image></ImageView>
-                  <Button fx:id="btnEndTurn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleEndTurnButtonAction" prefHeight="29.0" prefWidth="68.0" text="End Turn" textAlignment="CENTER" textFill="#56171a" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Button fx:id="btnEndTurn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleEndTurnButtonAction" text="End Turn" textAlignment="CENTER" textFill="#56171a" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font name="Windlass" size="12.0" />
                      </font>
                      <GridPane.margin>
-                        <Insets bottom="21.0" left="7.0" right="5.0" />
+                        <Insets bottom="21.0" />
                      </GridPane.margin>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
                   </Button>
                   <Button fx:id="btnGoEast" mnemonicParsing="false" onAction="#handleGoEastButtonAction" text="East" textAlignment="CENTER" textFill="#56171a" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <GridPane.margin>
